[gd_scene load_steps=25 format=3 uid="uid://b0wly204l2ena"]

[ext_resource type="Script" uid="uid://jcofvi7o5sx6" path="res://scripts/entities/player/PlayerController.gd" id="1_3d8xk"]
[ext_resource type="Texture2D" uid="uid://cqcy0ktn0qa3i" path="res://assets/debug/textures/Light/texture_07.png" id="1_hcqin"]
[ext_resource type="Script" uid="uid://3jpbtgk2ox3v" path="res://scripts/state-machine/StateMachine.gd" id="3_0kck2"]
[ext_resource type="Script" uid="uid://r7ggknfdcijq" path="res://scripts/entities/player/states/PlayerWalking.gd" id="3_jeygn"]
[ext_resource type="Script" uid="uid://cvxdrd2m5vbgf" path="res://scripts/entities/player/states/PlayerCombat.gd" id="4_0kck2"]
[ext_resource type="Script" uid="uid://dgw2r4365cdvh" path="res://scripts/entities/player/states/TransientPlayerRunning.gd" id="5_d3mra"]
[ext_resource type="Script" uid="uid://cqsis73v5qr3t" path="res://scripts/entities/player/states/TransientPlayerBlock.gd" id="7_0qcyq"]
[ext_resource type="Script" uid="uid://dofyti6k6j38s" path="res://scripts/entities/player/states/TransientPlayerDodge.gd" id="8_d3mra"]
[ext_resource type="Resource" uid="uid://xn4rk8nmql2l" path="res://resources/weapons/sword.tres" id="8_tofid"]
[ext_resource type="Script" uid="uid://b8tw0twqghynv" path="res://scripts/entities/player/EquipmentManager.gd" id="9_0qcyq"]
[ext_resource type="Script" uid="uid://cq8ba60xa7owg" path="res://scripts/entities/player/states/TransientPlayerAttack.gd" id="9_lmqpx"]
[ext_resource type="Script" uid="uid://byby0cr46ugkv" path="res://scripts/entities/CombatController.gd" id="10_d3mra"]
[ext_resource type="Script" uid="uid://dftysctitabs5" path="res://scripts/resources/ItemData.gd" id="10_t2i2o"]
[ext_resource type="Resource" uid="uid://cvt27u74alxa2" path="res://resources/attacks/profiles/OneHandedSlash.tres" id="14_nvc1o"]
[ext_resource type="AnimationLibrary" uid="uid://b5kwie374few5" path="res://animations/combat.res" id="16_wgn03"]
[ext_resource type="Script" uid="uid://bg3dy1jtahxwh" path="res://scripts/debug/DebugAnimationCallback.gd" id="17_k1vjg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hcqin"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3d8xk"]
albedo_texture = ExtResource("1_hcqin")
uv1_triplanar = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hcqin"]
material = SubResource("StandardMaterial3D_3d8xk")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hcqin"]
albedo_color = Color(0.26779, 0.26779, 0.26779, 1)

[sub_resource type="BoxMesh" id="BoxMesh_3d8xk"]
material = SubResource("StandardMaterial3D_hcqin")
size = Vector3(0.75, 0.25, 0.25)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3d8xk"]
radius = 20.0

[sub_resource type="Animation" id="Animation_wgn03"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Rig/HandR")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k1vjg"]
_data = {
&"RESET": SubResource("Animation_wgn03")
}

[node name="PlayerController" type="CharacterBody3D"]
collision_mask = 3
script = ExtResource("1_3d8xk")

[node name="Collider" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_hcqin")

[node name="Model" type="Node3D" parent="."]

[node name="BodyMesh" type="MeshInstance3D" parent="Model"]
mesh = SubResource("CapsuleMesh_hcqin")
skeleton = NodePath("../..")

[node name="Eyes" type="Node3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.549, -0.399)

[node name="EyesMesh" type="MeshInstance3D" parent="Model/Eyes"]
mesh = SubResource("BoxMesh_3d8xk")
skeleton = NodePath("../../..")

[node name="StateMachine" type="Node3D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_0kck2")
initial_state = NodePath("walking")

[node name="walking" type="Node" parent="StateMachine"]
script = ExtResource("3_jeygn")

[node name="trans_running" type="Node" parent="StateMachine"]
script = ExtResource("5_d3mra")

[node name="combat" type="Node3D" parent="StateMachine"]
script = ExtResource("4_0kck2")

[node name="LockonArea" type="Area3D" parent="StateMachine/combat"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="StateMachine/combat/LockonArea"]
shape = SubResource("CylinderShape3D_3d8xk")
debug_color = Color(0.694854, 0.494987, 0.0234025, 0.42)

[node name="trans_block" type="Node" parent="StateMachine"]
script = ExtResource("7_0qcyq")

[node name="trans_dodge" type="Node" parent="StateMachine"]
script = ExtResource("8_d3mra")

[node name="trans_attack" type="Node" parent="StateMachine"]
script = ExtResource("9_lmqpx")

[node name="Rig" type="Node3D" parent="."]

[node name="HandR" type="Node3D" parent="Rig"]
transform = Transform3D(0.9999999, 0, 0, 0, 1.0000001, 0, 0, 0, 0.9999997, 0, 0, 0)

[node name="HandL" type="Node3D" parent="Rig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0, -0.5)

[node name="HitscanRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Equipment" type="Node" parent="." node_paths=PackedStringArray("SlotPivots")]
script = ExtResource("9_0qcyq")
EquipmentSlots = Array[ExtResource("10_t2i2o")]([ExtResource("8_tofid")])
SlotPivots = [NodePath("../Rig/HandR")]
SlotNames = Array[String](["Main Weapon"])
SlotConstraints = Array[int]([0])

[node name="CombatController" type="Node" parent="." node_paths=PackedStringArray("hitscan_root", "animator")]
script = ExtResource("10_d3mra")
hitscan_root = NodePath("../HitscanRoot")
animator = NodePath("CombatPlayer")
active_scan_zones = Array[bool]([false])
profile = ExtResource("14_nvc1o")

[node name="CombatPlayer" type="AnimationPlayer" parent="CombatController"]
libraries = {
&"": SubResource("AnimationLibrary_k1vjg"),
&"combat": ExtResource("16_wgn03")
}

[node name="DebugAnimationCallback" type="Node" parent="CombatController" node_paths=PackedStringArray("Animator", "track_targets")]
script = ExtResource("17_k1vjg")
Animator = NodePath("../CombatPlayer")
track_targets = [NodePath("..")]
callArray = [[{
"args": [0],
"method": &"internal_begin_hitscan"
}, {
"args": [0],
"method": &"internal_end_hitscan"
}]]
keyTimes = [[0.3, 0.8]]
currentKeyFrames = Array[int]([2])
